--- a/index.html
+++ b/index.html
@@ -7,8 +7,21 @@
     <title>Zoom</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" />
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet"> 
 </head>
 <body>
+    <header>
+        <div class="bottone griglia">
+            <i class="fas fa-th"> </i>
+            <span class="speaker"> Speaker View</span>
+
+        </div>
+        <div class="bottone frecce">
+            <i class="fas fa-expand-arrows-alt"></i>
+        </div>
+
+    </header>
     
 </body>
 </html>
